--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "babel-preset-stage-1": "^6.16.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
-    "react": "^15.4.2",
+    "react" : "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "react-tooltip": "^3.2.2",
     "redux": "^3.6.0",
-    "redux-form": "^6.4.3"
+    "redux-form": "^6.4.3",
+    "reselect": "^2.5.4"
   }
 }
