--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-tooltip": "^3.2.2",
     "redux": "^3.6.0",
     "redux-form": "^6.4.3",
+    "redux-localstorage": "^0.4.1",
     "reselect": "^2.5.4"
   }
 }
